# riteg

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  LICENSE.txt  README.md  a.out  build.unix.generic.sh  build.windows.x32.bat  build.windows.x32.sh  build.windows.x64.bat  build.windows.x64.sh  mkdocs.yml  package.unix.generic.sh  package.windows.x32.bat  package.windows.x64.bat  thirdpartylegalnotices.py  thirdpartylegalnotices.txt  vhs.json  vhs_old.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yml
docs/: 00.compiling.md  00_building.md  01.running.md  01_commandline.md  02.project.md  02_json_format.md  03.shadertoy.md  03_shader_copypasta.md  04.license.md  04_tips_and_tricks.md  app_icon.xcf  index.md
docs/pipelines/: README.md
font/: anonymous-pro-regular.h
include/glad/: gl.h
json/: ccd.v1.json  checker.json  ntsc.v1.json  vhs.v2.json  vhs.v3.json  vhs.v4.json  vhs.v5.json  vhs.v6.json
pipelines/: garble.json  vhs.json
project/: MdXSWn.glsl  VHS.V8.lua  example.lua  imgui.ini  invert.frag  mtyGWy.glsl  pass_through.frag  riteg.json  shadertoy_test.glsl  test.frag
project/TEST/: clBBWc_A.glsl  clBBWc_B.glsl  clBBWc_IMAGE.glsl  pixelize.frag  riteg.json
project/VHS.V7/: riteg.json
project/example/: project.toml
project/example/shaders/: example.frag  pixelize.frag
project/rectest/: riteg.json
project/test_project/: imgui.ini  riteg.json
project/vhs/: project.toml
project/vhs/shaders/: blur_gaussian_13.frag  blur_gaussian_5.frag  blur_gaussian_9.frag  blur_lowpass.frag  gamma_correct.frag  lowrange.frag  ntsc_demodulate.frag  ntsc_modulate.frag  ntsc_postprocess.frag  ntsc_snow.frag  rgb_to_yiq.frag  sharpen.frag  subtract.frag  vhs_color_amplify.frag  vhs_color_noise.frag  vhs_cutoff.frag  vhs_dropout.frag  vhs_headswitch.frag  vhs_tracking.frag  yiq_swizzle.frag  yiq_to_rgb.frag
riteg/: CMakeLists.txt  assert.hh  basic_image.hh  blank.cc  blank.hh  cmdline.cc  cmdline.hh  debug_out.cc  debug_out.hh  globals.cc  globals.hh  image.cc  image.hh  loader.hh  loader_fsiter.cc  loader_fsiter.hh  loader_oneshot.cc  loader_oneshot.hh  loader_sprintf.cc  loader_sprintf.hh  logging.cc  logging.hh  main.cc  menu_bar.cc  menu_bar.hh  node_editor.cc  node_editor.hh  pch.hh  precompiled.hh  project.cc  project.hh  riteg.rc  saver.cc  saver.hh  saver_oneshot.cc  saver_oneshot.hh  saver_sprintf.cc  saver_sprintf.hh  shader.cc  shader.hh  (+9 more)
riteg/core/: format.cc  format.hh  globals.cc  globals.hh  logging.cc
riteg/graph/: base_node.cc  base_node.hh  dest_display.cc  dest_display.hh  dest_image.cc  dest_image.hh  glsl_shader.cc  glsl_shader.hh  node.cc  node.hh  shader.cc  shader.hh  shader_node.cc  shader_node.hh  shader_pass.cc  shader_pass.hh  shadertoy.cc  shadertoy.hh  src_blank.cc  src_blank.hh  src_image.cc  src_image.hh  target_imgui.cc  target_imgui.hh
riteg/gui/: frame_select.cc  frame_select.hh  menu_bar.cc  menu_bar.hh  node_display.cc  node_display.hh  node_edit.cc  node_edit.hh  project_edit.cc  project_edit.hh  shader_files.cc  shader_files.hh  style.cc  style.hh
riteg/project/: input.cc  input.hh  project.cc  project.hh
shaders/: blend_add.frag  blend_divide.frag  blend_mul.frag  blend_mult.frag  blend_multiply.frag  blend_subtract.frag  blend_vhs_dropout.frag  blur_fast13.frag  blur_fast5.frag  blur_fast9.frag  blur_gaussian_13.frag  blur_gaussian_9.frag  blur_linear_exp.frag  blur_lowpass.frag  ccd_burnin.frag  ccd_lowrange.frag  checkerboard.frag  color_rgb_to_yiq.frag  color_yiq_to_rgb.frag  combine_xw_yz.frag  combine_yiq.frag  convert_rgb_to_yiq.frag  convert_yiq_rgb.frag  convert_yiq_to_rgb.frag  effect_vhs_head_switch.frag  effect_vhs_luma_bleed.frag  fir_lowpass.frag  gaussblur_fast5.frag  gen_checkerboard.frag  gen_uniform_noise.frag  gen_vhs_dropout.frag  gen_vhs_head_noise.frag  lowrange.frag  mix_add.frag  mix_copy.frag  mix_subtract.frag  noise.frag  noise_composite.frag  noise_specks.frag  ntsc_chroma_noise.frag  (+26 more)
shaders.old/: blur_linear_exp.frag  ntsc_modulate.frag
src/: riteg.c
tools/: build-unix.sh  build-win32.sh  build-win64.sh  pack-unix.sh  pack-win32.sh  pack-win64.sh
yapping/: effect.frag  effect.jsonc  project.jsonc
